--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "express-api",
   "version": "1.0.0",
-  "description": "",
+  "description": "Simple express api test.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "dev": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -15,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/steffbeckers/express-api/issues"
   },
-  "homepage": "https://github.com/steffbeckers/express-api#readme"
+  "homepage": "https://github.com/steffbeckers/express-api#readme",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
+  }
 }
